--- a/styles.css
+++ b/styles.css
@@ -13,7 +13,7 @@ p img {
 
 /* Add a black background color to the top navigation */
 .topnav {
-    background-color: seagreen;
+    background-color: #2E8B57;
     overflow: hidden;
   }
   
